# tee_seL4_tools

elfloader-tool/: CMakeLists.txt
gen_hss_payload/: CMakeLists.txt  Findgen_hss_payload.cmake  config.yaml
